--- a/LeagueOfLegends/LeagueOfLegends_WPF.csproj
+++ b/LeagueOfLegends/LeagueOfLegends_WPF.csproj
@@ -63,6 +63,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChampionStoreWindow.xaml.cs">
+      <DependentUpon>ChampionStoreWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MatchHistoryWindow.xaml.cs">
+      <DependentUpon>MatchHistoryWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PreBuildsWindow.xaml.cs">
+      <DependentUpon>PreBuildsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SkinStoreWindow.xaml.cs">
+      <DependentUpon>SkinStoreWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="ChampionStoreWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="FaqWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -89,6 +105,18 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MatchHistoryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PreBuildsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SkinStoreWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -116,6 +144,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LeagueOfLegends_Moddels\LeagueOfLegends_Moddels.csproj">
+      <Project>{BCD72E13-C814-4380-B9FE-92CF8DC73813}</Project>
+      <Name>LeagueOfLegends_Moddels</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.1.2\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.1.2\build\MaterialDesignThemes.targets')" />
