--- a/LeagueOfLegends_DAL/LeagueOfLegends_DAL.csproj
+++ b/LeagueOfLegends_DAL/LeagueOfLegends_DAL.csproj
@@ -53,16 +53,17 @@
     <Compile Include="Aankoop.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Champions.cs">
+    <Compile Include="Champion.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DatabaseOperations.cs" />
     <Compile Include="Friendship.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Gamemode.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Icons.cs">
+    <Compile Include="Icon.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="LeagueOfLegendsModel.Context.cs">
@@ -90,7 +91,7 @@
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Skins.cs">
+    <Compile Include="Skin.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Speler.cs">
@@ -99,13 +100,13 @@
     <Compile Include="Spelersaccount.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Spelers_champions.cs">
+    <Compile Include="Spelers_champion.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Spelers_Icons.cs">
+    <Compile Include="Spelers_Icon.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Spelers_Skins.cs">
+    <Compile Include="Spelers_Skin.cs">
       <DependentUpon>LeagueOfLegendsModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Store.cs">
